fix [referenced] refs to NamespacedObjectReferenced
